--- a/app/src/main/res/layout/activity_video_select.xml
+++ b/app/src/main/res/layout/activity_video_select.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".VideoSelect">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ToolbarTheme" />
+
     <TextView
         android:id="@+id/textView4"
         android:layout_width="match_parent"
@@ -43,7 +51,7 @@
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/toolbar2">
 
         <TextView
             android:id="@+id/textView3"
