--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -2,10 +2,23 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/blue_back"
     tools:context=".PlayerActivity.PlayerActivity">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/view_black"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:cardBackgroundColor="@color/black"
+        app:cardCornerRadius="0dp"
+        app:cardElevation="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/video_view"
@@ -68,6 +81,7 @@
         android:background="@drawable/scene_back"
         android:text="Voice Seek"
         app:backgroundTint="#FFB300"
+        app:elevation="0dp"
         app:icon="@drawable/ic_baseline_mic_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar" />
@@ -80,6 +94,7 @@
         android:background="@drawable/scene_back"
         android:text="Describe Scene"
         app:backgroundTint="#FFB300"
+        app:elevation="0dp"
         app:icon="@drawable/ic_baseline_wb_sunny_24"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/switch1"
