--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -66,7 +66,6 @@
         android:fontFamily="sans-serif-condensed-medium"
         android:gravity="center"
         android:lines="2"
-        android:text="Whats happening in the Video..."
         android:textColor="@color/teal_700"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -79,7 +78,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/scene_back"
-        android:text="Voice Seek"
+        android:text="Search"
         app:backgroundTint="#FFB300"
         app:elevation="0dp"
         app:icon="@drawable/ic_baseline_mic_24"
